# ChangeLog for app-emulation/emul-linux-x86-qtlibs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-qtlibs/ChangeLog,v 1.46 2009/08/28 13:35:01 betelgeuse Exp $

  28 Aug 2009; Petteri Räty <betelgeuse@gentoo.org>
  emul-linux-x86-qtlibs-20071210.ebuild,
  emul-linux-x86-qtlibs-20081109.ebuild:
  Migrate to EAPI 2 in order to remove built_with_use usage.

  06 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
  -emul-linux-x86-qtlibs-3.4.4-r5.ebuild,
  -emul-linux-x86-qtlibs-10.0.ebuild, -emul-linux-x86-qtlibs-10.0-r1.ebuild,
  -emul-linux-x86-qtlibs-20071114.ebuild,
  -emul-linux-x86-qtlibs-20071114-r1.ebuild:
  Remove vulnerable versions, bug 271704

*emul-linux-x86-qtlibs-20081109 (10 Nov 2008)

  10 Nov 2008; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-qtlibs-20081109.ebuild:
  package bump

  28 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*emul-linux-x86-qtlibs-20080316 (17 Mar 2008)

  17 Mar 2008; Peter Weller <welp@gentoo.org>
  +emul-linux-x86-qtlibs-20080316.ebuild:
  Bump

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing herbs from metadata.xml as per #88780.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing kugelfang from metadata.xml as per #46972.

  11 Dec 2007; <welp@gentoo.org> emul-linux-x86-qtlibs-20071210.ebuild:
  Stable on amd64

*emul-linux-x86-qtlibs-20071210 (11 Dec 2007)

  11 Dec 2007; <welp@gentoo.org> +emul-linux-x86-qtlibs-20071210.ebuild:
  Bump

*emul-linux-x86-qtlibs-20071114-r2 (25 Nov 2007)

  25 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-qtlibs-20071114-r2.ebuild:
  change inherit order to fix DESCRIPTION bug

  24 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-qtlibs-20071114-r1.ebuild:
  fix missing inherit, bug 200163

*emul-linux-x86-qtlibs-20071114-r1 (24 Nov 2007)
