@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/emul-linux-x86-qtlibs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-qtlibs/ChangeLog,v 1.46 2009/08/28 13:35:01 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-qtlibs/ChangeLog,v 1.47 2009/10/04 17:59:06 kingtaco Exp $
+
+*emul-linux-x86-qtlibs-20091004_rc1 (04 Oct 2009)
+
+  04 Oct 2009; Mike Doty <kingtaco@gentoo.org>
+  +emul-linux-x86-qtlibs-20091004_rc1.ebuild:
+  new emul rc
 
   28 Aug 2009; Petteri Räty <betelgeuse@gentoo.org>
   emul-linux-x86-qtlibs-20071210.ebuild,
